# research-skills

./: README.md
research-report-review/: SKILL.md  review-principles.md
wechat-mp-cli/: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
wechat-mp-cli/examples/: urls.txt
wechat-mp-cli/src/wechat_mp_cli/: __init__.py  cli.py  lark.py  library.py
weekly-report-review/: SKILL.md
