[project]
name = "wechat-mp-cli"
version = "0.2.0"
description = "Collect, fetch, summarize, and archive public WeChat Official Account articles. Works great with an AI agent."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["wechat", "weixin", "cli", "archive", "feishu", "lark"]
dependencies = []

[project.scripts]
wechat-mp = "wechat_mp_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
